--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,12 @@
             <artifactId>spring-context</artifactId>
             <version>6.0.6</version>
         </dependency>
+
+        <dependency>
+            <groupId>Javax.annotation</groupId>
+            <artifactId>Javax.annotation-api</artifactId>
+            <version>1.3.2</version>
+        </dependency>
     </dependencies>
 
 </project>
