--- a/pom.xml
+++ b/pom.xml
@@ -20,11 +20,12 @@
             <version>6.0.6</version>
         </dependency>
 
-<!--        <dependency>-->
-<!--            <groupId>Javax.annotation</groupId>-->
-<!--            <artifactId>Javax.annotation-api</artifactId>-->
-<!--            <version>1.3.2</version>-->
-<!--        </dependency>-->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-aspects</artifactId>
+            <version>6.0.6</version>
+        </dependency>
+
     </dependencies>
 
 </project>
